Update strings and add dev preferences

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -690,30 +690,30 @@
     <string name="suggested_edits_unlock_notification_button">Yes, let’s go</string>
     <string name="suggested_edits_unlock_add_captions_dialog_title">You unlocked the "Add image captions" task</string>
     <string name="suggested_edits_unlock_add_captions_notification_title">You unlocked "Add image captions"</string>
-    <string name="suggested_edits_unlock_add_captions_dialog_message">Thanks for all your contributions! Since we think you like adding captions to images, we’ve compiled a list of images that are missing captions. Could you help us improve Wikipedia?</string>
-    <string name="suggested_edits_unlock_add_captions_notification_big_text">Suggested edits\n\nThanks for all your contributions. Since we think you like adding captions to images, we’ve compiled a list of images that are missing captions. Could you help us improve Wikipedia?</string>
+    <string name="suggested_edits_unlock_add_captions_dialog_message">Congratulations on your third image caption edit! Since we think you like adding captions to images, we’ve compiled a list of images missing captions. Could you help us improving Wikipedia?</string>
+    <string name="suggested_edits_unlock_add_captions_notification_big_text">Suggested edits\n\nCongratulations on your third image caption edit! Since we think you like adding captions to images, we’ve compiled a list of images missing captions. Could you help us improving Wikipedia?</string>
     <string name="suggested_edits_unlock_translate_captions_dialog_title">You unlocked the "Translate image captions" task</string>
     <string name="suggested_edits_unlock_translate_captions_notification_title">You unlocked "Translate image captions"</string>
-    <string name="suggested_edits_unlock_translate_captions_dialog_message">Thanks for all your contributions! You’re using the app in multiple languages, so we’ve compiled a list of images needing caption translations. Will you continue to help us improve Wikipedia?</string>
-    <string name="suggested_edits_unlock_translate_captions_notification_big_text">Suggested edits\n\nThanks for all your contributions. You’re using the app in multiple languages, so we’ve compiled a list of images needing caption translations. Will you continue to help us improve Wikipedia?</string>
+    <string name="suggested_edits_unlock_translate_captions_dialog_message">Congratulations on your 15th image caption edit, we’re amazed! You’re using the app in multiple languages, so we’ve compiled a list of images needing caption translations. Could you continue to help us improving Wikipedia?</string>
+    <string name="suggested_edits_unlock_translate_captions_notification_big_text">Suggested edits\n\nCongratulations on your 15th image caption edit, we’re amazed! You’re using the app in multiple languages, so we’ve compiled a list of images needing caption translations. Could you continue to help us improving Wikipedia?</string>
     <string name="suggested_edits_license_notice"><![CDATA[By adding the description, I agree to the <a href="%1$s">Terms of Use</a> and to irrevocably release my contributions under the <a href="%2$s">Creative Commons CC0</a> license.]]></string>
     <string name="suggested_edits_image_caption_license_notice"><![CDATA[By adding the image caption, I agree to the <a href="%1$s">Terms of Use</a> and to irrevocably release my contributions under the <a href="%2$s">Creative Commons CC0</a> license.]]></string>
     <string name="suggested_edits_menu_info">Info</string>
     <string name="suggested_edits_tasks_activity_title">Suggested edits</string>
     <string name="suggested_edits_task_add_description_title">Add article descriptions</string>
     <string name="suggested_edits_task_add_description_description">Contribute to articles without descriptions</string>
-    <string name="suggested_edits_task_image_caption_title">Caption images</string>
-    <string name="suggested_edits_task_image_caption_description">Add captions to images</string>
-    <string name="suggested_edits_task_multilingual_title">More tasks for multilingual editors</string>
-    <string name="suggested_edits_task_multilingual_description">Translation tasks are available if you read and write in more than one Wikipedia language.</string>
     <string name="suggested_edits_task_translation_title">Translate article descriptions</string>
     <string name="suggested_edits_task_translation_description">Translate descriptions across article languages.</string>
+    <string name="suggested_edits_task_image_caption_title">Add image captions</string>
+    <string name="suggested_edits_task_image_caption_description">Add missing short captions to images</string>
+    <string name="suggested_edits_task_translate_caption_title">Translate image captions</string>
+    <string name="suggested_edits_task_translate_caption_description">Translate captions into other languages</string>
+    <string name="suggested_edits_task_multilingual_title">More tasks for multilingual editors</string>
+    <string name="suggested_edits_task_multilingual_description">Translation tasks are available if you read and write in more than one Wikipedia language.</string>
     <string name="suggested_edits_task_image_caption_edit_disable_text">Locked until you’ve made %d verified contributions</string>
     <string name="suggested_edits_task_translate_description_edit_disable_text">Locked until you’ve made %d verified contributions</string>
     <string name="suggested_edits_task_multilingual_negative">Not for me</string>
     <string name="suggested_edits_task_multilingual_positive">Add languages</string>
-    <string name="suggested_edits_task_translate_caption_title">Translate image captions</string>
-    <string name="suggested_edits_task_translate_caption_description">Translate captions into other languages</string>
     <string name="suggested_edits_image_caption_summary_title_artist">Artist</string>
     <string name="suggested_edits_image_caption_summary_title_author">Author</string>
     <string name="suggested_edits_image_caption_summary_title_source">Source</string>
