--- a/app/src/main/res/values-qq/strings.xml
+++ b/app/src/main/res/values-qq/strings.xml
@@ -800,4 +800,6 @@
   <string name="suggested_edits_image_preview_dialog_licensing">Label for image licensing detail on image details screen.</string>
   <string name="suggested_edits_image_preview_dialog_more_info">Label for link to more details about the image on commons page.</string>
   <string name="suggested_edits_image_preview_dialog_file_page_link_text">Text for link to more details about the image on commons page.</string>
+  <string name="suggested_edits_article_cta_add_image_caption">Text for call to action button on article lead image, prompting the user to add a caption to the image.</string>
+  <string name="suggested_edits_article_cta_translate_image_caption">Text for call to action button on article lead image, prompting the user to translate caption into their language. The language into which the caption needs to be translated into, is indicated by  %s . </string>
 </resources>
