--- a/app/src/main/res/values-ko/strings.xml
+++ b/app/src/main/res/values-ko/strings.xml
@@ -598,7 +598,7 @@
   <string name="description_edit_article_description_label_per_language">문서 (%s)</string>
   <string name="description_edit_translate_article_description_hint_per_language">문서 설명 (%s)</string>
   <string name="description_edit_add_caption_label_per_language">이미지 설명 (%s)</string>
-  <string name="description_edit_translate_caption_hint_per_language">이미지 설명</string>
+  <string name="description_edit_translate_caption_hint_per_language">이미지 설명 (%s)</string>
   <string name="description_edit_save">게시</string>
   <string name="description_edit_read">읽기</string>
   <string name="description_edit_add_description">문서 설명 추가</string>
