--- a/app/src/main/res/values-pl/strings.xml
+++ b/app/src/main/res/values-pl/strings.xml
@@ -604,7 +604,7 @@
   <string name="feed_lang_selection_dialog_ok_button_text">OK</string>
   <string name="feed_lang_selection_dialog_cancel_button_text">Anuluj</string>
   <string name="description_edit_text_hint" fuzzy="true">Opis tytułu</string>
-  <string name="description_edit_translate_caption_hint_per_language">Podpisy obrazka</string>
+  <string name="description_edit_translate_caption_hint_per_language">Podpisy obrazka (%s)</string>
   <string name="description_edit_save">Opublikuj</string>
   <string name="description_edit_add_description" fuzzy="true">Dodaj opis tytułu</string>
   <string name="description_edit_edit_description" fuzzy="true">Edytuj opis</string>
