--- a/app/src/main/res/values-ca/strings.xml
+++ b/app/src/main/res/values-ca/strings.xml
@@ -601,7 +601,7 @@
   <string name="description_edit_article_description_label_per_language">Article (%s)</string>
   <string name="description_edit_translate_article_description_hint_per_language">Descripció de l\'article (%s)</string>
   <string name="description_edit_add_caption_label_per_language">Descripció de la imatge (%s)</string>
-  <string name="description_edit_translate_caption_hint_per_language">Llegendes de la imatge</string>
+  <string name="description_edit_translate_caption_hint_per_language">Llegendes de la imatge (%s)</string>
   <string name="description_edit_save">Publica</string>
   <string name="description_edit_read">Llegeix</string>
   <string name="description_edit_add_description">Afegeix una descripció d\'article</string>
