--- a/app/src/main/res/values-fa/strings.xml
+++ b/app/src/main/res/values-fa/strings.xml
@@ -613,7 +613,7 @@
   <string name="feed_lang_selection_dialog_ok_button_text">تأیید</string>
   <string name="feed_lang_selection_dialog_cancel_button_text">لغو</string>
   <string name="description_edit_text_hint">توضیحات مقاله</string>
-  <string name="description_edit_translate_caption_hint_per_language">توضیح تصویر</string>
+  <string name="description_edit_translate_caption_hint_per_language">توضیح تصویر (%s)</string>
   <string name="description_edit_save">منتشر</string>
   <string name="description_edit_read">خواندن</string>
   <string name="description_edit_add_description">افزودن توضیحات مقاله</string>
