--- a/app/src/main/res/values-io/strings.xml
+++ b/app/src/main/res/values-io/strings.xml
@@ -333,7 +333,7 @@
   <string name="view_featured_article_footer_saved_button_label">Salvita</string>
   <string name="feed_configure_menu_select_all" fuzzy="true">Selektar omno</string>
   <string name="feed_configure_menu_deselect_all" fuzzy="true">Desselektar omno</string>
-  <string name="description_edit_translate_caption_hint_per_language">Deskripto-texto por imaji</string>
+  <string name="description_edit_translate_caption_hint_per_language">Deskripto-texto por imaji (%s)</string>
   <string name="description_edit_save">Publikigar</string>
   <string name="description_edit_add_image_caption">Adjuntez informo pri l\'imajo</string>
   <string name="description_edit_cancel_hint">Nihiligar</string>
