--- a/app/src/main/res/values-it/strings.xml
+++ b/app/src/main/res/values-it/strings.xml
@@ -587,7 +587,7 @@
   <string name="feed_lang_selection_dialog_ok_button_text">OK</string>
   <string name="feed_lang_selection_dialog_cancel_button_text">Annulla</string>
   <string name="description_edit_text_hint">Descrizione della voce</string>
-  <string name="description_edit_translate_caption_hint_per_language">Didascalia immagine</string>
+  <string name="description_edit_translate_caption_hint_per_language">Didascalia immagine (%s)</string>
   <string name="description_edit_save">Pubblica</string>
   <string name="description_edit_read">Leggi</string>
   <string name="description_edit_add_description">Aggiungi una descrizione della voce</string>
