--- a/app/src/main/res/values-mk/strings.xml
+++ b/app/src/main/res/values-mk/strings.xml
@@ -589,7 +589,7 @@
   <string name="description_edit_article_description_label_per_language">Статија (%s)</string>
   <string name="description_edit_translate_article_description_hint_per_language">Опис на статијата (%s)</string>
   <string name="description_edit_add_caption_label_per_language">Опис на сликата (%s)</string>
-  <string name="description_edit_translate_caption_hint_per_language">Описи на сликата</string>
+  <string name="description_edit_translate_caption_hint_per_language">Описи на сликата (%s)</string>
   <string name="description_edit_save">Објави</string>
   <string name="description_edit_read">Прочитај</string>
   <string name="description_edit_add_description">Додај опис на статијата</string>
