--- a/app/src/main/res/values-ru/strings.xml
+++ b/app/src/main/res/values-ru/strings.xml
@@ -633,7 +633,7 @@
   <string name="description_edit_article_description_label_per_language">Статья %s</string>
   <string name="description_edit_translate_article_description_hint_per_language">Описаниe статей (%s)</string>
   <string name="description_edit_add_caption_label_per_language">Описание изображения (%s)</string>
-  <string name="description_edit_translate_caption_hint_per_language">Описания изображений</string>
+  <string name="description_edit_translate_caption_hint_per_language">Описания изображений (%s)</string>
   <string name="description_edit_save">Сохранить</string>
   <string name="description_edit_read">Читать</string>
   <string name="description_edit_add_description">Добавить описание статьи</string>
