--- a/app/src/main/res/values-shn/strings.xml
+++ b/app/src/main/res/values-shn/strings.xml
@@ -583,7 +583,7 @@
   <string name="feed_lang_selection_dialog_ok_button_text">ဢူဝ်ႇၶေႇ</string>
   <string name="feed_lang_selection_dialog_cancel_button_text">ဢမ်ႇႁဵတ်း</string>
   <string name="description_edit_text_hint">ၶေႃႈသပ်းလႅင်း ႁူဝ်ၶေႃႈ</string>
-  <string name="description_edit_translate_caption_hint_per_language">ႁူဝ်ၶေႃႈ ၶႅပ်းႁၢင်ႈ</string>
+  <string name="description_edit_translate_caption_hint_per_language">ႁူဝ်ၶေႃႈ ၶႅပ်းႁၢင်ႈ (%s)</string>
   <string name="description_edit_save">ပိုၼ်ဢွၵ်ႇ</string>
   <string name="description_edit_read">လူတူၺ်း</string>
   <string name="description_edit_add_description">ထႅမ်သႂ်ႇ ၶေႃႈသပ်းလႅင်းႁူဝ်ၶေႃႈ</string>
