Minor tweaks to ImagePreviewDialog.
Change-Id: Id6e3cea9b7586f77030104450068e173dd062858

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -732,7 +732,7 @@
     <string name="suggested_edits_image_preview_dialog_date">Date</string>
     <string name="suggested_edits_image_preview_dialog_source">Source/Photographer</string>
     <string name="suggested_edits_image_preview_dialog_licensing">Licensing</string>
-    <string name="suggested_edits_image_preview_dialog_more_info">More Infos</string>
+    <string name="suggested_edits_image_preview_dialog_more_info">More Info</string>
     <string name="suggested_edits_image_preview_dialog_file_page_link_text">File page on Wikimedia Commons</string>
     <string name="suggested_edits_article_cta_add_image_caption">Add caption</string>
     <string name="suggested_edits_article_cta_translate_image_caption">Add caption (%s)</string>
