--- a/app/src/main/res/values-qq/strings.xml
+++ b/app/src/main/res/values-qq/strings.xml
@@ -544,14 +544,20 @@
   <string name="preference_title_notification_poll">Label for settings switch that enables or disables polling of new notifications.\n\n{{doc-important|\"Poll\" is a verb here. This is about the polling of notifications, not about notifications of polls.}}</string>
   <string name="preference_summary_notification_poll">Short summary explaining what polling of notification means.</string>
   <string name="preference_category_notification_types">Label for the settings category that contains the types of notifications that are shown in the app.</string>
-  <string name="preference_title_notification_welcome">Label for settings switch that enables or disables Welcome notifications.\n{{Identical|Welcome}}</string>
-  <string name="preference_summary_notification_welcome">Short summary explaining what Welcome notifications are.</string>
+  <string name="preference_title_notification_system">Label for settings switch that enables or disables System notifications.</string>
+  <string name="preference_summary_notification_system">Short summary explaining what System notifications are.</string>
   <string name="preference_title_notification_milestone">Label for settings switch that enables or disables Milestone notifications.</string>
   <string name="preference_summary_notification_milestone">Short summary explaining what Milestone notifications are.</string>
   <string name="preference_title_notification_thanks">Label for settings switch that enables or disables Thanks notifications.</string>
   <string name="preference_summary_notification_thanks">Short summary explaining what Thanks notifications are.</string>
   <string name="preference_title_notification_revert">Label for settings switch that enables or disables Revert notifications.</string>
   <string name="preference_summary_notification_revert">Short summary explaining what Revert notifications are.</string>
+  <string name="preference_title_notification_login_fail">Label for settings switch that enables or disables Login notifications.</string>
+  <string name="preference_summary_notification_login_fail">Short summary explaining what Login notifications are.</string>
+  <string name="preference_title_notification_mention">Label for settings switch that enables or disables Mention notifications.</string>
+  <string name="preference_summary_notification_mention">Short summary explaining what Mention notifications are.</string>
+  <string name="preference_title_notification_user_talk">Label for settings switch that enables or disables User talk notifications.</string>
+  <string name="preference_summary_notification_user_talk">Short summary explaining what User talk notifications are.</string>
   <string name="view_because_you_read_card_title">Label for card in the feed that gives the user reading suggestions based on an article from their browsing history.</string>
   <string name="view_random_card_title">Title of a card that the user can click to view a randomly selected Wikipedia article</string>
   <string name="view_random_card_subtitle">Message inviting the user to view a randomly selected Wikipedia article.</string>
