--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -753,6 +753,8 @@
     <string name="suggested_edits_feed_card_add_description_button">Add article description</string>
     <string name="suggested_edits_snackbar_survey_text">How was your editing experience? Please take a moment to fill out the survey about in-app editing.</string>
     <string name="suggested_edits_snackbar_survey_action_text">Take Survey</string>
+    <string name="suggested_edits_task_action_text_add">Add</string>
+    <string name="suggested_edits_task_action_text_translate">Translate</string>
     <!-- /Suggested edits -->
 
     <!-- Description editing revert help -->
